--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,13 @@
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
     </dependencies>
+    <build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+    
 </project>
